# test-jenkins

./: .gitignore  CMakeLists.txt  DockerFile  Dockerfile  DockerfileLinux  DockerfileWindows  Jenkinsfile  build.bat  compile.bat  main.cpp
.github/workflows/: test.yml
